fixed path, removed tags, added description for swagger docs
