# storage/api-docs/api-docs.json
@@ -6,13 +6,11 @@
         "version": "1.0.0.0"
     },
     "paths": {
-        "/bookmarks": {
+        "/api/bookmarks": {
             "post": {
-                "tags": [
-                    "Bookmarks"
-                ],
                 "summary": "Create a bookmark",
-                "operationId": "5df9fe3aa431ffd75eeed821c6c30074",
+                "description": "Creates a new bookmark and returns a confirmation message",
+                "operationId": "3ef5b66b351fa996ad037e264208b30a",
                 "requestBody": {
                     "required": true,
                     "content": {
@@ -29,7 +27,7 @@
                                     },
                                     "resource_id": {
                                         "type": "integer",
-                                        "example": 11
+                                        "example": 10
                                     }
                                 },
                                 "type": "object"
@@ -43,7 +41,45 @@
                         "content": {
                             "application/json": {
                                 "schema": {
-                                    "$ref": "#/components/schemas/Bookmark"
+                                    "properties": {
+                                        "id": {
+                                            "type": "integer",
+                                            "example": 1
+                                        },
+                                        "github_id": {
+                                            "type": "integer",
+                                            "example": 6729608
+                                        },
+                                        "resource_id": {
+                                            "type": "integer",
+                                            "example": 11
+                                        },
+                                        "created_at": {
+                                            "type": "string",
+                                            "format": "date-time"
+                                        },
+                                        "updated_at": {
+                                            "type": "string",
+                                            "format": "date-time"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "409": {
+                        "description": "Conflict",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "message": {
+                                            "type": "string",
+                                            "example": "Bookmark already exists."
+                                        }
+                                    },
+                                    "type": "object"
                                 }
                             }
                         }
@@ -51,11 +87,9 @@
                 }
             },
             "delete": {
-                "tags": [
-                    "Bookmarks"
-                ],
                 "summary": "Delete a bookmark",
-                "operationId": "156c8c638a41e9c78f8ab28de90dec7d",
+                "description": "Deletes a bookmark and returns a confirmation message",
+                "operationId": "41bfde9ffcfb74e92d350e61b45c157b",
                 "requestBody": {
                     "required": true,
                     "content": {
@@ -72,7 +106,7 @@
                                     },
                                     "resource_id": {
                                         "type": "integer",
-                                        "example": 11
+                                        "example": 10
                                     }
                                 },
                                 "type": "object"
@@ -96,17 +130,31 @@
                                 }
                             }
                         }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "error": {
+                                            "type": "string",
+                                            "example": "Bookmark not found"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
                     }
                 }
             }
         },
-        "/bookmarks/{github_id}": {
+        "/api/bookmarks/{github_id}": {
             "get": {
-                "tags": [
-                    "Bookmarks"
-                ],
                 "summary": "Get all bookmarks for a student",
-                "operationId": "151fbc647d8dbc35020878212602047d",
+                "description": "If the student's github_id exists it returns all bookmarks for that student or an empty array in case there is not any",
+                "operationId": "615226efbbbcd8b51e9f0a3cc43f526f",
                 "parameters": [
                     {
                         "name": "github_id",
@@ -124,10 +172,15 @@
                         "content": {
                             "application/json": {
                                 "schema": {
-                                    "type": "array",
-                                    "items": {
-                                        "$ref": "#/components/schemas/Bookmark"
-                                    }
+                                    "properties": {
+                                        "bookmarks": {
+                                            "type": "array",
+                                            "items": {
+                                                "$ref": "#/components/schemas/Bookmark"
+                                            }
+                                        }
+                                    },
+                                    "type": "object"
                                 }
                             }
                         }
@@ -137,9 +190,6 @@
         },
         "/api/resources": {
             "get": {
-                "tags": [
-                    "Resources"
-                ],
                 "summary": "Get all resources",
                 "description": "return a list of all resources",
                 "operationId": "ee96de2f37d473ea4740b7700ddd1daf",
@@ -167,9 +217,6 @@
         },
         "/api/roles": {
             "post": {
-                "tags": [
-                    "Roles"
-                ],
                 "summary": "Create a new role",
                 "description": "Allows an authorized user to create a new role for a specific GitHub ID.",
                 "operationId": "4131bb39b430bdf2d95b73111d2e126a",
@@ -243,9 +290,6 @@
         },
         "/api/login": {
             "post": {
-                "tags": [
-                    "Roles"
-                ],
                 "summary": "Retrieve a role by GitHub ID",
                 "description": "Fetches a role using the provided GitHub ID. If the role does not exist, it returns an error.",
                 "operationId": "b381f169e17b927e71d392ff0f3d4ce5",
@@ -427,11 +471,5 @@
                 "type": "object"
             }
         }
-    },
-    "tags": [
-        {
-            "name": "Bookmarks",
-            "description": "Bookmarks"
-        }
-    ]
+    }
 }
